# nav-stack-ros2

./: .gitignore  .gitmodules
.github/: copilot-instructions.md
docker/: run.sh
docker/dockerfile/: nav_stack_ros2.Dockerfile  vcu_ctl.Dockerfile
docker/dockerfile/ros2_ws/src/: mmdet3d-1.4.0-py3-none-any.whl
docker/dockerfile/ros2_ws/src/robosense_driver/: CMakeLists.txt  package.xml
docker/dockerfile/ros2_ws/src/robosense_driver/src/: rsview.cpp
docker/dockerfile/wit_ros2_imu/launch/: rviz_and_imu.launch.py
docker/dockerfile/wit_ros2_imu/wit_ros2_imu/: wit_ros2_imu.py
gps_imu_ws/bag/: metadata.yaml
gps_imu_ws/bag1/: metadata.yaml
gps_imu_ws/src/gps_local_follower/: package.xml  setup.py
gps_imu_ws/src/gps_local_follower/gps_local_follower/: local_follower.py  pid_follower.py
gps_imu_ws/src/gps_local_follower/scripts/: local_follower  pid_follower
gps_imu_ws/src/gps_msgs/: CMakeLists.txt  package.xml
gps_imu_ws/src/gps_msgs/msg/: AngleSpeed.msg  GlobalPath.msg  Waypoint.msg
gps_imu_ws/src/gps_nav_bringup/: package.xml  setup.py
gps_imu_ws/src/gps_nav_bringup/config/: robot_localization.yaml
gps_imu_ws/src/gps_nav_bringup/data/: route.csv
gps_imu_ws/src/gps_nav_bringup/gps_nav_bringup/: drive_cl_sim.py  gps_imu_sim.py
gps_imu_ws/src/gps_nav_bringup/launch/: gps_nav_pid_sim.launch.py  gps_nav_real.launch.py  gps_nav_sim.launch.py
gps_imu_ws/src/gps_nav_bringup/rviz/: gps_nav.rviz
gps_imu_ws/src/gps_nav_bringup/scripts/: drive_cl_sim  gps_imu_sim
gps_imu_ws/src/gps_nav_bringup/urdf/: diffbot.urdf
gps_imu_ws/src/gps_path_server/: package.xml  setup.py
gps_imu_ws/src/gps_path_server/gps_path_server/: geo_to_map_path.py  path_server.py
gps_imu_ws/src/gps_path_server/scripts/: geo_to_map_path  path_server
lidar_ws/config/: bale_60x100.yaml  bale_loose.yaml  rse1.yaml
lidar_ws/data/rosbag2_2025_12_26-08_23_55/: metadata.yaml
lidar_ws/data/rosbag2_2025_12_26-09_11_54/: metadata.yaml
lidar_ws/data/rosbag2_2025_12_27-09_04_39/: metadata.yaml
lidar_ws/src/box_pose_estimator/: package.xml  setup.cfg  setup.py  setup.py.save
lidar_ws/src/box_pose_estimator/box_pose_estimator/: pose_estimator.py  pose_rviz.py
lidar_ws/src/pcl_conversions/: package.xml
lidar_ws/src/robosense_driver/: CMakeLists.txt  package.xml
lidar_ws/src/robosense_driver/config/: bale_60x100.yaml
lidar_ws/src/robosense_driver/launch/: bale_detector.launch.py  robosense.launch.py
lidar_ws/src/robosense_driver/src/: bale_detector.cpp  bale_estimator.cpp
pid_follower_ws/data/: frames_2026-01-10_08.15.11.gv  points.csv  points0.csv  points1.csv  points2.csv  run1.csv  test.csv  test3.csv  test9.csv  yuanqu.csv
pid_follower_ws/data/rosbag2_2025_12_01-17_08_58/: metadata.yaml
pid_follower_ws/data/rosbag2_2025_12_02-17_15_00/: metadata.yaml
pid_follower_ws/data/rosbag2_2025_12_02-17_52_30/: metadata.yaml
pid_follower_ws/data/rosbag2_2025_12_02-17_58_02/: metadata.yaml
pid_follower_ws/data/rosbag2_2025_12_12-08_49_35/: metadata.yaml
pid_follower_ws/script/: can_monitor.py
pid_follower_ws/src/gps_nmea_bridge/: package.xml  setup.cfg  setup.py
pid_follower_ws/src/gps_nmea_bridge/gps_nmea_bridge/: gps_nmea_bridge_node.py
pid_follower_ws/src/gps_nmea_bridge/launch/: gps_serial.launch.py
pid_follower_ws/src/gps_nmea_bridge/scripts/: gps_nmea_bridge_node
pid_follower_ws/src/gps_pid_follower/: package.xml  setup.cfg  setup.py
pid_follower_ws/src/gps_pid_follower/config/: params.yaml
pid_follower_ws/src/gps_pid_follower/gps_pid_follower/: 16122025.py  drive_key.py  vcu_can_teleop.py  waypoint_pid_follower.py  waypoint_pid_follower.py.save  wpf.backup
pid_follower_ws/src/gps_pid_follower/launch/: can_teleop.launch.py  follow.launch.py  sim.launch.py
pid_follower_ws/src/gps_pid_follower/resource/: gps_pid_follower
pid_follower_ws/src/gps_pid_sim/: package.xml  setup.cfg  setup.py
pid_follower_ws/src/gps_pid_sim/gps_pid_sim/: sim_diffdrive_gps_imu.py
pid_follower_ws/src/imu_driver/: package.xml  setup.py
pid_follower_ws/src/imu_driver/imu_driver/: imu_driver.py
pid_follower_ws/src/nmea_bridge/scripts/: nmea_bridge_node
stack_can_ws/data/: points.csv
stack_can_ws/script/: can_monitor.py  server_gps_ws.py  server_heading_ws.py  websocket_teleop.py
stack_can_ws/src/imu_driver/imu_driver/: imu_driver.py
stack_can_ws/src/main/: package.xml  setup.cfg  setup.py
stack_can_ws/src/main/config/: params.yaml
stack_can_ws/src/main/launch/: follow.launch.py
stack_can_ws/src/main/main/: can_sender.py  dr_odometry_node.py  rtk_center_from_nmea.py  stack_can_executor.py  teleop_key.py  traj_waypoint_follower.py  vcu_can_teleop.py  websocket_teleop_key.py
stack_can_ws/src/nmea_bridge/: package.xml  setup.cfg  setup.py
stack_can_ws/src/nmea_bridge/launch/: serial.launch.py
stack_can_ws/src/nmea_bridge/nmea_bridge/: nmea_bridge_node.py
stack_can_ws/src/robosense_driver/: CMakeLists.txt  package.xml
stack_can_ws/src/robosense_driver/config/: sensor.yaml
stack_can_ws/src/robosense_driver/launch/: bale_estimator.launch.py
stack_can_ws/src/robosense_driver/src/: bale_detector.cpp  rsview.cpp  zhang.cpp
stack_can_ws/src/stack_msgs/: CMakeLists.txt  package.xml
stack_can_ws/src/stack_msgs/msg/: StackCommand.msg
