<?xml version="1.0"?>
<package format="3">
  <name>gps_local_follower</name>
  <version>0.0.1</version>
  <description>Pure Pursuit follower output AngleSpeed</description>
  <maintainer email="you@example.com">you</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>gps_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>

</package>
