<?xml version="1.0"?>
<package format="3">
  <name>gps_nav_bringup</name>
  <version>0.0.1</version>
  <description>Bringup for GPS-only navigation</description>
  <maintainer email="you@example.com">you</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>gps_path_server</exec_depend>
  <exec_depend>gps_local_follower</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>gps_msgs</exec_depend>
  <exec_depend>geographiclib</exec_depend>
  
  <export>
    <build_type>ament_python</build_type>
  </export>

</package>
