<?xml version="1.0"?>
<package format="3">
  <name>gps_path_server</name>
  <version>0.0.1</version>
  <description>CSV->ENU path sampler (line/arc)</description>
  <maintainer email="you@example.com">you</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>gps_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>

</package>
