<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gps_pid_follower</name>
  <version>0.1.0</version>
  <description>GPS+IMU PID waypoint follower for differential tracks (/cmd_vel)</description>
  <maintainer email="you@example.com">root</maintainer>
  <buildtool_depend>ament_python</buildtool_depend>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  
  <!-- for ros2 launch -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <!-- 仿真launch需要启动 gps_pid_sim 的节点 -->
  <exec_depend>gps_pid_sim</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
